--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 <!-- Open Graph (für Link-Vorschau bei z. B. WhatsApp, Facebook) -->
 <meta property="og:title" content="Matching-Mate-App" />
 <meta property="og:description" content="Teste, wie gut ihr wirklich zusammenpasst!" />
-<meta property="og:image" content="/preview.jpg" />
+<meta property="og:image" content="/heart.jpg" />
 <meta property="og:url" content="https://matching-mate-app-o3cp.vercel.app" />
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:title" content="Matching-Mate-App" />
 <meta name="twitter:description" content="Teste, wie gut ihr wirklich zusammenpasst!" />
-<meta name="twitter:image" content="/preview.jpg" />
+<meta name="twitter:image" content="/heart.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Matching-Mate-App</title>
   </head>
