--- a/index.html
+++ b/index.html
@@ -1,24 +1,27 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <!-- Favicon (Tab-Icon) -->
-<link rel="icon" type="image/png" href="/favicon.png" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Matching-Mate-App</title>
+  <link rel="icon" href="/favicon.png" />
 
-<!-- Open Graph (für Link-Vorschau bei z. B. WhatsApp, Facebook) -->
-<meta property="og:title" content="Matching-Mate-App" />
-<meta property="og:description" content="Teste, wie gut ihr wirklich zusammenpasst!" />
-<meta property="og:image" content="/heart.jpg" />
-<meta property="og:url" content="https://matching-mate-app-o3cp.vercel.app" />
+  <!-- Open Graph für WhatsApp, Facebook, LinkedIn etc. -->
+  <meta property="og:title" content="Matching-Mate-App" />
+  <meta property="og:description" content="Teste wie gut ihr zusammenpasst! 💘" />
+  <meta property="og:image" content="/preview.png" />
+  <meta property="og:image:type" content="image/png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:url" content="https://matching-mate-app-v5.vercel.app/" />
+  <meta property="og:type" content="website" />
 
-<!-- Twitter Card -->
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:title" content="Matching-Mate-App" />
-<meta name="twitter:description" content="Teste, wie gut ihr wirklich zusammenpasst!" />
-<meta name="twitter:image" content="/heart.jpg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Matching-Mate-App</title>
-  </head>
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Matching-Mate-App" />
+  <meta name="twitter:description" content="Teste wie gut ihr zusammenpasst! 💘" />
+  <meta name="twitter:image" content="/preview.png" />
+</head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
