--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Open Graph für WhatsApp, Facebook, LinkedIn etc. -->
   <meta property="og:title" content="Matching-Mate-App" />
   <meta property="og:description" content="Teste wie gut ihr zusammenpasst! 💘" />
-  <meta property="og:image" content="/preview.png" />
+  <meta property="og:image" content="https://matching-mate-app-v5.vercel.app/source/preview.png" />
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
