--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- Open Graph für WhatsApp, Facebook, LinkedIn etc. -->
   <meta property="og:title" content="Matching-Mate-App" />
   <meta property="og:description" content="Teste wie gut ihr zusammenpasst! 💘" />
-  <meta property="og:image" content="https://matching-mate-app-v5.vercel.app/source/preview.png" />
+  <meta property="og:image" content="https://matching-mate-app-v5.vercel.app/favicon.png" />
   <meta property="og:image:type" content="image/png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
@@ -20,7 +20,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Matching-Mate-App" />
   <meta name="twitter:description" content="Teste wie gut ihr zusammenpasst! 💘" />
-  <meta name="twitter:image" content="/preview.png" />
+  <meta name="twitter:image" content="/favicon.png" />
 </head>
   <body>
     <div id="root"></div>
