--- a/index.html
+++ b/index.html
@@ -26,4 +26,7 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
+  <footer className="footer">
+  <p>© {new Date().getFullYear()} Oskar Becker. Alle Rechte vorbehalten.</p>
+</footer>
 </html>
