--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <!-- Open Graph für WhatsApp, Facebook, LinkedIn etc. -->
   <meta property="og:title" content="Matching-Mate-App" />
-  <meta property="og:description" content="Teste wie gut ihr zusammenpasst! 💘" />
+  <meta property="og:description" content="Passt ihr zusammen? 💘 Are you a match?" />
   <meta property="og:image" content="https://matching-mate-app-v5.vercel.app/heart.jpg" />
   <meta property="og:image:type" content="image/jpeg" />
   <meta property="og:image:width" content="1200" />
@@ -19,7 +19,7 @@
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Matching-Mate-App" />
-  <meta name="twitter:description" content="Teste wie gut ihr zusammenpasst! 💘" />
+  <meta name="twitter:description" content="Passt ihr zusammen? 💘 Are you a match?" />
   <meta name="twitter:image" content="/heart.jpg" />
 </head>
   <body>
