--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <footer style="text-align: right
+; margin-top: 2rem; font-size: 0.9rem;">
+  &copy; Oskar Becker
+</footer>
   </body>
   
 </html>
