--- a/index.html
+++ b/index.html
@@ -25,9 +25,19 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
-    <footer style="text-align: right
-; margin-top: 2rem; font-size: 0.9rem;">
-  &copy; Oskar Becker
+    <footer style="
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  text-align: right;
+  font-size: 0.9rem;
+  padding: 0.5rem 0;
+  background: #f8f8f8;
+  color: #666;
+  border-top: 1px solid #ddd;
+">
+  &copy; <a href="https://www.oskarbecker.com" target="_blank" rel="noopener noreferrer">Oskar Becker</a>
 </footer>
   </body>
   
