--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
     <footer style="text-align: center; margin-top: 2rem; font-size: 0.9rem;">
-  &copy; 2025 <a href="https://oskarbecker.com" target="_blank" rel="noopener noreferrer">Oskar Becker</a>
+  &copy; <a href="https://oskarbecker.com" target="_blank" rel="noopener noreferrer">Oskar Becker</a>
 </footer>
   </body>
   
